--- a/.github/workflows/form-tests.yml
+++ b/.github/workflows/form-tests.yml
@@ -33,6 +33,30 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable
 
+      # Installer les dépendances nécessaires pour Chrome
+      - name: Install Chrome dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            wget \
+            unzip \
+            xvfb \
+            libnss3 \
+            libgconf-2-4 \
+            libxss1 \
+            libappindicator3-1 \
+            fonts-liberation \
+            libasound2 \
+            libatk1.0-0 \
+            libcups2 \
+            libgtk-3-0 \
+            libx11-xcb1 \
+            libxcomposite1 \
+            libxdamage1 \
+            libxrandr2 \
+            libpangocairo-1.0-0 \
+            libxshmfence1
+
       # Lancer les tests pytest
       - name: Run Tests
         run: |
