--- a/.github/workflows/form-tests.yml
+++ b/.github/workflows/form-tests.yml
@@ -37,4 +37,10 @@ jobs:
 
       - name: Run Tests with Xvfb
         run: |
-          xvfb-run -a pytest -v --maxfail=1 --disable-warnings
+          xvfb-run -a pytest -v --disable-warnings --html=report.html --self-contained-html
+          
+      - name: Upload HTML Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: pytest-html-report
+          path: report.html
